added functionalities - multiplication and division - logical operations

--- a/src/ui/index.html
+++ b/src/ui/index.html
@@ -16,22 +16,22 @@
     <title>Dart-MIPS compiler</title>
     <style>
       #edit-area {
-        height: 468px !important;
+        height: 88vh !important;
       }
       #output-area {
-        height: 270px !important;
+        height: 55vh !important;
       }
       #console-area {
-        height: 110px !important;
+        height: 44vh !important;
       }
       #edit-area-container {
-        height: 500px !important;
+        height: 88vh !important;
       }
       #side-container {
-        height: 500px !important;
+        height: 92vh !important;
       }
       .full-container {
-        height: 500px !important;
+        height: 88vh !important;
       }
     </style>
   </head>
@@ -52,7 +52,7 @@
             id="add-file"
             class="text-white bg-gray-500 rounded-lg py-1 px-3 hover:bg-gray-400"
           >
-            +
+            <i class="fas fa-plus" aria-hidden="true"></i> Open From File
           </button>
         </div>
         <div class="flex items-center">
