--- a/src/ui/index.html
+++ b/src/ui/index.html
@@ -69,12 +69,12 @@
       <!-- Editor -->
       <div class="flex-1 flex flex-row w-full full-container">
         <!-- Code editor -->
-        <div id="edit-area-container" class="flex-1 p-4 w-3/5">
+        <div id="edit-area-container" class="flex-1 p-4 w-3/5 flex-row">
           <textarea
             id="edit-area"
             class="border w-full text-white border-gray-600 bg-gray-800 rounded-md p-2 h-full"
           ></textarea>
-        </div>
+        </div>        
         <!-- Output and console panel -->
         <div id="side-container"
           class="w-2/5 bg-gray-900 text-gray-200 p-4 flex flex-col gap-5 h-full"
