--- a/src/ui/index.html
+++ b/src/ui/index.html
@@ -37,27 +37,25 @@
   </head>
   <body class="bg-gray-900 font-sans">
     <!-- Toolbar -->
-    <div class="bg-gray-800 text-gray-200 px-6">
+    <div class="bg-gray-800 text-gray-200 border-b border-gray-600">
       <div class="flex justify-between items-center">
         <!-- Tab bar -->
         <div class="flex flex-row h-1/6 flex items-center bg-gray-800 py-2">
           <div
             id="tab-container"
             class="bg-gray-800 text-gray-200 px-4 flex items-center">
-            <!-- <button class="text-white bg-gray-500 rounded-l-lg px-3 py-1 mr-1 hover:bg-gray-400">index.html</button>
-          <button class="text-gray-300 bg-gray-700 px-3 py-1 mr-1 hover:bg-gray-400">app.js</button> -->
           </div>
           <button
             id="add-file"
             class="text-white bg-gray-500 rounded-lg py-1 px-3
             hover:bg-gray-400">
-            <i class="fas fa-plus" aria-hidden="true"></i> Open From File
+            <i class="fas fa-folder-open" aria-hidden="true"></i> Open From File
           </button>
         </div>
-        <div class="flex items-center">
+        <div class="flex flex-row items-right">
           <button id="compile-btn"
-            class="text-gray-900 mr-4 border rounded bg-green-400 px-2 py-1
-            hover:bg-green-800 hover:text-gray-200 focus:border-black">
+            class="text-gray-900 mr-4 border border-green-600 rounded bg-green-500 px-2 py-1
+            hover:bg-green-600 focus:border-black">
             <i class="fas fa-play"></i> Compile
           </button>
         </div>
@@ -66,13 +64,13 @@
     <!-- Main content area -->
     <div class="flex flex-row h-screen full-container">
       <!-- Editor -->
-      <div class="flex-1 flex flex-row w-full full-container">
+      <div class="flex-1 flex flex-row h-full w-full full-container">
         <!-- Code editor -->
-        <div id="edit-area-container" class="flex-1 p-4 w-3/5">
+        <div id="edit-area-container" class="flex-1 p-4 w-3/5 h-full">
           <textarea
             id="edit-area"
             class="border w-full font-mono text-white border-gray-600
-            bg-gray-800 rounded-sm p-2 h-full"></textarea>
+            bg-gray-800 rounded-sm p-2 h-full resize-none"></textarea>
         </div>
         <!-- Output and console panel -->
         <div id="side-container"
